Terminal now properly works when --enable-native-access=ALL-UNNAMED not used